[gd_scene load_steps=5 format=3 uid="uid://wk2sogn46wr6"]

[ext_resource type="Theme" uid="uid://cqcjtq2qlj7fd" path="res://game/UI/default_theme.tres" id="1_do6pa"]
[ext_resource type="Script" path="res://game/UI/main_menu_ui.gd" id="2_pjm4k"]
[ext_resource type="AudioStream" uid="uid://d2sljvep0dsac" path="res://assets/sfx/click.wav" id="4_sinma"]
[ext_resource type="AudioStream" uid="uid://dwh7nfeybtgr3" path="res://assets/sfx/step.wav" id="5_41xfe"]

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_do6pa")
script = ExtResource("2_pjm4k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Play"

[node name="SettingButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Setting"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -191.0
offset_top = -152.0
offset_right = -29.0
offset_bottom = -29.0
grow_horizontal = 0
grow_vertical = 0
text = "Made
by
Chronotiv"
horizontal_alignment = 1

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_sinma")
volume_db = -20.0

[node name="ButtonHoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_41xfe")

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/SettingButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
